# cli-wallet

./: .gitignore  Cargo.toml  README.md  gon-config.json  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_test.yml  publish.yml
documentation/: .gitignore  docusaurus.config.js  sidebars.js
documentation/docs/: 00_introduction.md  00_welcome.md  01_installation.md  02_account_manager.md  03_account.md  04_step_by_step.md
src/: account-cli.yml  account.rs  account_history.rs  account_manager.rs  cli.yml  error.rs  helper.rs  helpers.rs  main.rs
src/command/: account.rs  account_manager.rs
src/commands/: account.rs  account_manager.rs
