[package]
name = "cli-wallet"
version = "1.0.0-rc.2"
authors = [ "IOTA Stiftung" ]
edition = "2021"
homepage = "https://iota.org"
description = "Command line interface application for the IOTA wallet library."
license = "Apache-2.0"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.23", default-features = false, features = [ "derive", "std" ] }
dialoguer = { version = "0.10.2", default-features = false, features = [ "password" ] }
fern-logger = { version = "0.5.0", default-features = false }
# iota-wallet = { version = "1.0.0-rc.2", default-features = false, features = [ "storage", "stronghold" ] }
iota-wallet = { git = "https://github.com/Thoralf-M/wallet.rs", rev = "166d993ab887538b57a7a1c473e5be1deab6ab62", default-features = false, features = [ "storage", "stronghold", "participation" ] }
log = { version = "0.4.17", default-features = false }
prefix-hex = { version = "0.5.0", default-features = false, features = [ "std" ] }
serde_json = { version = "1.0.87", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = [ "fs" ] }    

[profile.release]
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
