[package]
name = "cli-wallet"
version = "1.0.0-rc.2"
authors = [ "IOTA Stiftung" ]
edition = "2021"
homepage = "https://iota.org"
description = "Command line interface application for the IOTA wallet library."
license = "Apache-2.0"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.23", default-features = false, features = [ "derive", "std" ] }
dialoguer = { version = "0.10.2", default-features = false, features = [ "password", "history" ] }
fern-logger = { version = "0.5.0", default-features = false }
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", rev = "a00b4d48886fad6983f0b320baa750518d2b06d1", default-features = false, features = [ "storage", "stronghold", "participation" ] }
log = { version = "0.4.17", default-features = false }
prefix-hex = { version = "0.5.0", default-features = false, features = [ "std" ] }
serde_json = { version = "1.0.87", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = [ "fs" ] }    

[profile.release]
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
