[package]
name = "wallet-cli"
version = "0.5.4"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"
homepage = "https://iota.org"
description = "Command line interface application for the IOTA wallet library."
license = "Apache-2.0"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", rev = "b6772bfd7c89a45be222c9a8991fe73a6ddfccc5", features = ["ledger-nano", "ledger-nano-simulator"] }
tokio = { version = "1.12.0", features = ["full"] }
dialoguer = "0.10.3"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde_json = { version = "1.0.68", default-features = false }
futures = "0.3.17"
notify-rust = "4.5.5"

[profile.release]
lto = true
codegen-units = 1
